chore: Address Copilot comments & other improvements